Task 2/security_group.tf
resource "aws_security_group" "blogApp-sg" {

  vpc_id      = module.vpc.vpc_id
  name        = "blogApp-sg"
  description = "Security group for blogApp"


  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 80
    protocol    = "tcp"
    to_port     = 80
  }
 ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 3000
    protocol    = "tcp"
    to_port     = 3000
  }
  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
  }


}
